# test

carto/my/: CMakeLists.txt  package.xml
carto/my/config/: costmap_common_params.yaml  dwa_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
carto/my/launch/: landmarks_pub.launch  my_sub.launch  nav_amcl.launch  nav_carto.launch
carto/my/src/: Eigen_Affine3d.cpp  amcl_sub.cpp  b.cpp  landmarks_pub.cpp  laser2txt.cpp  mlandmarks_pub (copy).cpp  mlandmarks_pub.cpp  stage_sub.cpp  tf_sub_pub.cpp
carto/stage_ros/src/: .stageros.cpp.swp  stageros.cpp
charge_Recognition/: CMakeLists.txt  package.xml
charge_Recognition/launch/: laser_charge.launch
charge_Recognition/src/: laser_charge.cpp
zhixian20181015/: Fit_Err.m  Polar2Cart.m  Pose_Get.m  Region_Segment.m  angle_fit.m  find_corner.m  main1.m  main1.m~  main2.m  readme  test.m  untitled.m
zhixian20181015/data/: 0_1.2.mat  0_1.2.txt  0_1.8.mat  0_1.8.txt  0_2.4.mat  0_2.4.txt  0_3.0.mat  0_3.0.txt  1_1.2.mat  1_1.2.txt  1_1.8.mat  1_1.8.txt  1_2.4.mat  1_2.4.txt  1_3.0.mat  1_3.0.txt  2_1.2.mat  2_1.2.txt  2_1.8.mat  2_1.8.txt  2_2.4.mat  2_2.4.txt  2_3.0.mat  2_3.0.txt  laser1.txt  scan2mat.m  scan2mat.m~  test1.mat
zhixian20181015/误差分析/: readme  误差分析.ods  误差分析1.ods
